--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,1 +1,7 @@
 <p>home works!</p>
+<button
+  class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline cursor-pointer"
+  type="button"
+  (click)="logout()"
+>Logout
+</button>
