--- a/src/app/core/features/auth/pages/login/login.component.html
+++ b/src/app/core/features/auth/pages/login/login.component.html
@@ -1,8 +1,15 @@
 <div class="flex justify-center items-center h-screen">
-  <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-1/4" [formGroup]="form" (ngSubmit)="login()">
+  <form
+    class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-1/4"
+    [formGroup]="form"
+    (ngSubmit)="login()"
+  >
     <div class="mb-4 flex items-start">
-      <img alt="" src="/assets/icons/Logo.svg">
-      <label class="block text-gray-700 text-lg font-bold ml-2 mb-2" for="email">
+      <img alt="" src="../../../../../../assets/icons/Logo.svg"/>
+      <label
+        class="block text-gray-700 text-lg font-bold ml-2 mb-2"
+        for="email"
+      >
         Freenance
       </label>
     </div>
@@ -18,12 +25,21 @@
       <input
         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
         formControlName="email"
-        id="email" placeholder="Email" type="email">
+        id="email"
+        placeholder="Email"
+        type="email"
+      />
     </div>
-    <div *ngIf="isSubmitted && email?.errors?.['required']" class="text-red-500 text-sm mt-1">
+    <div
+      *ngIf="(isSubmitted$ | async) && email?.errors?.['required']"
+      class="text-red-500 text-sm mt-1"
+    >
       Email is required.
     </div>
-    <div *ngIf="isSubmitted && email.errors?.['email']" class="text-red-500 text-sm mt-1">
+    <div
+      *ngIf="(isSubmitted$ | async) && email.errors?.['email']"
+      class="text-red-500 text-sm mt-1"
+    >
       Value should be in email format.
     </div>
     <div class="mb-6">
@@ -33,16 +49,30 @@
       <input
         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
         formControlName="password"
-        id="password" placeholder="Password" type="password">
-      <div *ngIf="isSubmitted && password?.errors?.['required']" class="text-red-500 text-sm mt-1">
+        id="password"
+        placeholder="Password"
+        type="password"
+      />
+      <div
+        *ngIf="(isSubmitted$ | async) && password?.errors?.['required']"
+        class="text-red-500 text-sm mt-1"
+      >
         Password is required.
       </div>
-      <div *ngIf="isSubmitted && password.errors?.['minlength']" class="text-red-500 text-sm mt-1">
+      <div
+        *ngIf="(isSubmitted$ | async) && password.errors?.['minlength']"
+        class="text-red-500 text-sm mt-1"
+      >
         Minimum length is 6.
       </div>
     </div>
     <div class="flex items-baseline">
-      <input class="mr-2 leading-tight" formControlName="rememberMe" id="remember" type="checkbox"/>
+      <input
+        class="mr-2 leading-tight"
+        formControlName="rememberMe"
+        id="remember"
+        type="checkbox"
+      />
       <label class="block text-gray-700 text-sm font-bold mb-2" for="remember">
         Remember me
       </label>
