feat: refactored the final version according to master class code session

--- a/src/app/features/auth/pages/login/login-page.component.html
+++ b/src/app/features/auth/pages/login/login-page.component.html
@@ -1,8 +1,7 @@
 <div class="flex justify-center items-center h-screen">
   <login-form
           [submitted]="isSubmitted$ | async"
-          (markFieldsEmitter)="markFields($event)"
-          (rememberMeEmitter)="rememberMe($event)"
+          (markFieldsSubmittedEmitter)="markFields($event)"
           (submitEmitter)="login($event)"
   />
 </div>
