--- a/src/app/features/auth/components/login-form/login-form.component.html
+++ b/src/app/features/auth/components/login-form/login-form.component.html
@@ -1,10 +1,10 @@
 <form
-        class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"
+        class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 w-400px"
         [formGroup]="form"
         (ngSubmit)="submit()"
 >
     <div class="mb-4 flex items-start">
-        <img alt="" src="../../../../../../assets/icons/Logo.svg"/>
+        <img alt="" src="../../../../../assets/icons/Logo.svg"/>
         <label
                 class="block text-gray-700 text-lg font-bold ml-2 mb-2"
                 for="email"
