fix: refactored according to all recomendations

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,9 @@
 @tailwind utilities;
 
 @layer utilities {
-  .w-400px {
-    width: 400px;
+  .form {
+    &-middle {
+      width: 400px;
+    }
   }
 }
