--- a/src/app/features/auth/pages/registration/registration-page.component.html
+++ b/src/app/features/auth/pages/registration/registration-page.component.html
@@ -9,6 +9,6 @@
     <div class="block text-gray-700 text-lg font-bold ml-2 mb-2">Freenance</div>
   </div>
   <div class="mb-4">
-    <div class="block text-gray-700 text-md font-bold mb-2">Sig Up</div>
+    <div class="block text-gray-700 text-md font-bold mb-2">Sign Up</div>
   </div>
 </register-form>
