--- a/src/app/features/auth/pages/login/login-page.component.html
+++ b/src/app/features/auth/pages/login/login-page.component.html
@@ -7,5 +7,5 @@
     <img alt="" src="../../../../../assets/icons/Logo.svg" />
     <div class="block text-gray-700 text-lg font-bold ml-2 mb-2">Freenance</div>
   </div>
-  <div class="block text-gray-700 text-md font-bold mb-2">Sig In</div>
+  <div class="block text-gray-700 text-md font-bold mb-2">Sign In</div>
 </login-form>
