--- a/src/app/features/auth/pages/login/login-page.component.html
+++ b/src/app/features/auth/pages/login/login-page.component.html
@@ -1,11 +1,7 @@
 <login-form
   [loading]="loading$ | async"
   (submitForm)="login($event)"
-  (createAccount)="goToCreateAccount()"
+  (createAccount)="goToRegister()"
 >
-  <div class="mb-4 flex items-start">
-    <img alt="" src="../../../../../assets/icons/Logo.svg" />
-    <div class="block text-gray-700 text-lg font-bold ml-2 mb-2">Freenance</div>
-  </div>
-  <div class="block text-gray-700 text-md font-bold mb-2">Sign In</div>
+  <company-logo />
 </login-form>
