--- a/src/app/features/auth/pages/registration/registration-page.component.html
+++ b/src/app/features/auth/pages/registration/registration-page.component.html
@@ -1,14 +1,7 @@
 <register-form
   [loading]="loading$ | async"
-  [validationEmailError]="validationEmailError$ | async"
   (register)="register($event)"
-  (returnToSignIn)="goToSignIn()"
+  (returnToSignIn)="goToLogin()"
 >
-  <div class="mb-4 flex items-start">
-    <img alt="" src="/assets/icons/Logo.svg" />
-    <div class="block text-gray-700 text-lg font-bold ml-2 mb-2">Freenance</div>
-  </div>
-  <div class="mb-4">
-    <div class="block text-gray-700 text-md font-bold mb-2">Sign Up</div>
-  </div>
+  <company-logo />
 </register-form>
