feat: add a base app-layer page with child routes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,16 @@
     }
   }
 }
+
+.nav-item {
+
+  &.active {
+    background-color: lavender;
+  }
+
+  &:hover {
+    cursor: pointer;
+    background-color: aliceblue;
+  }
+}
+
