--- a/src/app/features/auth/components/register-form/register-form.component.html
+++ b/src/app/features/auth/components/register-form/register-form.component.html
@@ -1,108 +1,76 @@
-<spinner *ngIf="loading" />
-<div class="bg-white shadow-md rounded px-8 pt-4 pb-8 mb-2 form-middle">
-  <ng-content></ng-content>
-  <form [formGroup]="form" (ngSubmit)="submit()">
-    <div class="mb-2 block text-gray-700 text-md font-bold">
-      <h1>Sign Up</h1>
-    </div>
-    <div class="mb-4">
-      <label class="block text-gray-700 text-sm font-bold mb-2" for="name">
-        Name
-      </label>
+<form [formGroup]="form" (ngSubmit)="submit()">
+  <h3>Sign Up</h3>
+  <div class="mb-4">
+    <label class="block text-gray-700 text-sm font-bold mb-2" for="name">
+      Name
+    </label>
+    <input
+      class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+      formControlName="name"
+      id="name"
+      placeholder="Name"
+      type="text"
+    />
+    <validation-message 
+            class="text-red-500 text-sm mt-1" 
+            [control]="form.controls['name']" />
+  </div>
+  <div class="mb-2">
+    <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
+      Email
+    </label>
+    <input
+      class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+      formControlName="email"
+      id="email"
+      placeholder="Email"
+      type="email"
+    />
+    <validation-message
+            class="text-red-500 text-sm mt-1"
+            [control]="form.controls['email']" />
+  </div>
+  <div class="mb-6 mt-2">
+    <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
+      Password
+    </label>
+    <div class="flex items-baseline relative">
       <input
         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        formControlName="name"
-        id="name"
-        placeholder="Name"
-        type="text"
-      />
-      <div
-        *ngIf="
-          form.controls['name'].touched &&
-          form.controls['name']?.errors?.['required']
-        "
-        class="text-red-500 text-sm mt-1"
-      >
-        {{ formErrors['require'] }}
-      </div>
-    </div>
-    <div class="mb-2">
-      <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
-        Email
-      </label>
-      <input
-        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-        formControlName="email"
-        id="email"
-        placeholder="Email"
-        type="email"
-      />
-      <div
-        *ngIf="
-          form.controls['email'].touched &&
-          form.controls['email']?.errors?.['required']
-        "
-        class="text-red-500 text-sm mt-1"
-      >
-        {{ formErrors['required'] }}
-      </div>
-      <div
-        *ngIf="form.controls['email'].errors?.['validation']"
-        class="text-red-500 text-sm mt-1"
-      >
-        {{ form.controls['email'].getError('validation').message }}
-      </div>
-    </div>
-    <div class="mb-6 mt-2">
-      <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
-        Password
-      </label>
-      <div class="flex items-baseline relative">
-        <input
-          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-          formControlName="password"
-          id="password"
-          placeholder="Password"
-          [type]="isPasswordVisible ? 'text' : 'password'"
-        />
-        <button
-          class="btn btn-default absolute right-2 top-0 h-full"
-          type="button"
-          (click)="togglePasswordVisibility()"
-        >
-          <i
-            class="fa"
-            [ngClass]="{
-              'fa-eye': isPasswordVisible,
-              'fa-eye-slash': !isPasswordVisible
-            }"
-          ></i>
-        </button>
-      </div>
-      <div
-        *ngIf="
-          form.controls['password'].touched &&
-          form.controls['password']?.errors?.['required']
-        "
-        class="text-red-500 text-sm mt-1"
-      >
-        {{ formErrors['required'] }}
-      </div>
-    </div>
-    <div class="flex flex-col gap-1 items-center justify-between">
-      <input
-        class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full cursor-pointer"
-        type="submit"
-        value="Create account"
+        formControlName="password"
+        id="password"
+        placeholder="Password"
+        [type]="isPasswordVisible ? 'text' : 'password'"
       />
       <button
-        class="bg-gray-300 text-gray-600 py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full cursor-pointer"
+        class="btn btn-default absolute right-2 top-0 h-full"
         type="button"
-        (click)="returnToSignIn.emit()"
+        (click)="togglePasswordVisibility()"
       >
-        <i class="fa fa-long-arrow-left"></i>
-        Back to Sign In
+        <i
+          class="fa"
+          [ngClass]="{
+            'fa-eye': isPasswordVisible,
+            'fa-eye-slash': !isPasswordVisible
+          }"
+        ></i>
       </button>
     </div>
-  </form>
-</div>
+    <validation-message
+            class="text-red-500 text-sm mt-1"
+            [control]="form.controls['password']" />
+  </div>
+  <div class="flex flex-col gap-1 items-center justify-between">
+    <input
+      class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full cursor-pointer"
+      type="submit"
+      value="Create account"
+    />
+    <div class="bg-gray-300 text-gray-600 py-2 px-4 rounded focus:outline-none focus:shadow-outline text-center w-full cursor-pointer">
+      <a href="" (click)="navigate($event)">
+        <i class="fa fa-long-arrow-left"></i>
+        Back to Sign In
+      </a>
+    </div>
+  </div>
+</form>
