--- a/src/app/features/auth/pages/login/login-page.component.html
+++ b/src/app/features/auth/pages/login/login-page.component.html
@@ -1,7 +1,10 @@
-<login-form
-  [loading]="loading$ | async"
-  (submitForm)="login($event)"
-  (createAccount)="goToRegister()"
->
-  <company-logo />
-</login-form>
+<spinner *ngIf="loading$ | async" />
+<div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 form-middle">
+    <div class="mb-4 flex gap-2">
+        <img alt="" src="assets/icons/Logo.svg" />
+        <h1>Freenance</h1>
+    </div>
+  <login-form
+    (submitForm)="login($event)"
+   />
+</div>
