--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @tailwind base;
-
-h1 {
-  @apply text-2xl font-bold;
-}
-h2 {
-  @apply text-xl font-semibold;
-}
-h3 {
-  @apply text-lg font-semibold;
-}
-a {
-  @apply text-blue-600 underline;
-}
-
 @tailwind components;
 @tailwind utilities;
 
@@ -22,5 +8,20 @@ a {
     &-middle {
       width: 400px;
     }
+  }
+}
+
+@layer base {
+  h1 {
+    @apply text-2xl font-bold;
+  }
+  h2 {
+    @apply text-xl font-semibold;
+  }
+  h3 {
+    @apply text-lg font-semibold;
+  }
+  a {
+    @apply text-blue-600 underline;
   }
 }
