--- a/src/app/shared/components/validation-message/validation-message.component.html
+++ b/src/app/shared/components/validation-message/validation-message.component.html
@@ -1,3 +1,3 @@
 <small *ngFor="let error of errors | keyvalue | slice: 0 : 1">
-  {{ _errorMessages[error.key] || error.value }}
+  {{ errorMessages[error.key] || error.value }}
 </small>
