fix: restored logout button

--- a/src/app/layout/containers/navigation-panel/navigation-panel.component.html
+++ b/src/app/layout/containers/navigation-panel/navigation-panel.component.html
@@ -29,6 +29,7 @@
         <button
           class="bg-blue-500 hover:bg-blue-700 text-white font-bold p-2 m-1 rounded focus:outline-none focus:shadow-outline cursor-pointer"
           type="button"
+          (click)="logout()"
         >
           Logout(testing)
         </button>
