--- a/src/app/features/auth/components/register-form/register-form.component.html
+++ b/src/app/features/auth/components/register-form/register-form.component.html
@@ -5,7 +5,7 @@
       Name
     </label>
     <input
-      class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+      class="shadow appearance-none border border-gray-300 bg-gray-50 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
       formControlName="name"
       id="name"
       placeholder="Name"
@@ -21,7 +21,7 @@
       Email
     </label>
     <input
-      class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+      class="shadow appearance-none border border-gray-300 bg-gray-50 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
       formControlName="email"
       id="email"
       placeholder="Email"
@@ -38,7 +38,7 @@
     </label>
     <div class="flex items-baseline relative">
       <input
-        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        class="shadow appearance-none border border-gray-300 bg-gray-50 rounded-lg w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
         formControlName="password"
         id="password"
         placeholder="Password"
@@ -65,12 +65,12 @@
   </div>
   <div class="flex flex-col gap-1 items-center justify-between">
     <input
-      class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full cursor-pointer"
+      class="bg-blue-500 hover:bg-blue-700 font-bold text-white py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full cursor-pointer"
       type="submit"
       value="Create account"
     />
     <div
-      class="bg-gray-300 text-gray-600 py-2 px-4 rounded focus:outline-none focus:shadow-outline text-center w-full cursor-pointer"
+      class="bg-gray-300 text-gray-600 py-2 px-4 font-bold rounded focus:outline-none focus:shadow-outline text-center w-full cursor-pointer"
     >
       <a routerLink="/auth/login">
         <i class="fa fa-long-arrow-left"></i>
