refactoring: features routing refactoring refactoring: removed unused pages(client and invoices) fix: use <ul> and <li> together refactoring: renamed nav-bar-menu to navigation-menu refactoring: eliminated unnecessary injection tokens

--- a/src/app/layout/containers/sidebar/sidebar.component.html
+++ b/src/app/layout/containers/sidebar/sidebar.component.html
@@ -1,6 +1,5 @@
 <div
   class="flex flex-col justify-between h-full px-3 py-4 overflow-y-auto dark:bg-gray-800"
 >
-  <navigation-bar />
-  <navigation-item class="list-none" [item]="sideBarSettingsItem" />
+  <navigation-menu borderPosition="bottom" [items]="navigationMenu" />
 </div>
