--- a/src/app/layout/containers/sidebar/sidebar.component.html
+++ b/src/app/layout/containers/sidebar/sidebar.component.html
@@ -1,5 +1,6 @@
+<logo title="Freenance" src="assets/icons/Logo.svg" alt="Freenance logo" />
 <div
-  class="flex flex-col justify-between h-full px-3 py-4 overflow-y-auto dark:bg-gray-800"
+  class="flex flex-col justify-between h-full py-4 overflow-y-auto dark:bg-gray-800"
 >
-  <navigation-menu borderPosition="bottom" [items]="navigationMenu" />
+  <navigation-menu [items]="bottomMenu" />
 </div>
