fix: navigation-menu-item.component rename fix: remove wrapper for <sidebar> component

--- a/src/app/layout/components/navigation-menu/navigation-menu.component.html
+++ b/src/app/layout/components/navigation-menu/navigation-menu.component.html
@@ -1,5 +1,5 @@
 <ul>
   <li *ngFor="let item of items">
-    <navigation-item [item]="item" />
+    <navigation-menu-item [item]="item" />
   </li>
 </ul>
