fix: removed extra div tags from components

--- a/src/app/layout/pages/main-dashboard-page/main-dashboard-page.component.html
+++ b/src/app/layout/pages/main-dashboard-page/main-dashboard-page.component.html
@@ -1,16 +1,10 @@
 <sidebar />
-<main
-  class="grow m-4 p-4 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700"
->
-  <header-info />
-  <router-outlet />
-</main>
 
-<!--<div class="flex flex-col grow">-->
-<!--  <header-info />-->
-<!--  <div-->
-<!--          class="grow m-4 p-4 mt-0 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700"-->
-<!--  >-->
-<!--    <router-outlet />-->
-<!--  </div>-->
-<!--</div>-->
+<div class="flex flex-col grow">
+  <header-info />
+  <main
+    class="grow m-4 p-4 mt-0 border-2 border-gray-200 border-dashed rounded-lg dark:border-gray-700"
+  >
+    <router-outlet />
+  </main>
+</div>
