--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -1,8 +1,6 @@
 <header class="h-10 flex justify-end m-4 items-center">
-  <div class="flex">
-    <avatar [user]="user$ | async"></avatar>
-    <button (click)="logout()">
-      <i class="fa fa-sign-out fa-2x text-gray-500"></i>
-    </button>
-  </div>
+  <avatar [user]="user$ | async" />
+  <button (click)="logout()">
+    <i class="fa fa-sign-out fa-2x text-gray-500"></i>
+  </button>
 </header>
